--- a/gapelia-core/src/main/webapp/static/css/_library.scss
+++ b/gapelia-core/src/main/webapp/static/css/_library.scss
@@ -24,6 +24,7 @@ body.library {
 		#g-menu-toggle {
 			background-image: url("../images/folio-icon-solid.png") !important;
 			color: transparent !important;
+			left: 1rem;
 			top: 0.5rem;
 		}
 	}
