--- a/gapelia-core/src/main/webapp/static/css/_response.scss
+++ b/gapelia-core/src/main/webapp/static/css/_response.scss
@@ -294,6 +294,7 @@
 		}
 		
 		#g-menu-toggle {
+			background-image: none !important;
 			color: $white !important;
 			left: 0.6rem;
 		}
@@ -472,7 +473,15 @@
 			-webkit-transform: translate3d(0, 0, 0);
 
 			-webkit-overflow-scrolling: touch;
-
+			
+			#category-title {
+				font-size: 1.25rem;
+				position: absolute;
+				text-align: center;
+				top: 1.25rem;
+				width: 100%;
+			}
+			
 			#featured-nav { display: none; }
 		}
 
@@ -641,7 +650,24 @@
 		}
 
 	}
-
+	
+	// optimizations for library and profile splash so icons are visible //
+	
+	body.library #featured-panel {
+		background-color: transparent !important;
+		z-index: 10;
+	}
+	
+	#book-scroller #user-header {
+		background-color: transparent !important;
+		position: absolute;
+		z-index: 10;
+		text-align: center;
+		top: 0;
+		width: 100%;
+		display: block !important;
+	}
+	
 	/// FULL-BOOK/SCSS //////////////////////////////////////////////////////////////////////////////////
 
 	.full-book {
@@ -1148,6 +1174,7 @@
 			height: 75px; // 59%
 			position: relative;
 			transition: all 0.5s ease;
+			z-index: 10;
 
 			h2, .button-wrapper { display: none; }
 
@@ -1161,8 +1188,10 @@
 			}
 
 			#g-menu-toggle {
+				background-image: none !important;
 				color: $slate !important;
-				left: 1.3rem;
+				left: 1.1rem;
+				top: -10px;
 			}
 			
 			#user-wrapper {
@@ -1297,6 +1326,8 @@
 			margin-top: 0.5rem;
 			opacity: 1;
 			
+			display: none !important; // avoids issues with z-index, this now lives on top of book-scroller
+			
 			&:before {
 				content: "Published by";
 				margin-right: 6px;
@@ -1307,7 +1338,7 @@
 			//border-bottom: 1px solid $slate;
 			background: none !important;
 			height: 65px;
-			z-index: 0;
+			z-index: 10;
 			
 			#user-wrapper {
 				h2 {
