--- a/gapelia-core/src/main/webapp/static/css/style.css
+++ b/gapelia-core/src/main/webapp/static/css/style.css
@@ -2947,7 +2947,8 @@ body.landing h1 {
   font-size: 2rem !important;
   position: absolute;
   right: 1.5rem;
-  top: 1.5rem; }
+  top: 1.5rem;
+  z-index: 100 !important; }
 .app #library-splash #library-share ul li {
   display: inline;
   margin: 6px;
@@ -3235,6 +3236,7 @@ body.library #featured-panel h4 {
 body.library #featured-panel #g-menu-toggle {
   background-image: url("../images/folio-icon-solid.png") !important;
   color: transparent !important;
+  left: 1rem;
   top: 0.5rem; }
 body.library #g-menu-toggle {
   background-image: url("../images/folio-icon.png") !important;
@@ -6967,6 +6969,7 @@ a.count span.dont-move {
   .app #header-message button {
     top: 2.1rem; }
   .app #g-menu-toggle {
+    background-image: none !important;
     color: #fcfcfc !important;
     left: 0.6rem; }
   .app #next-book-toggle {
@@ -7109,6 +7112,12 @@ a.count span.dont-move {
     -moz-transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
     -webkit-overflow-scrolling: touch; }
+  .app #featured-scroller #category-title, .app #book-scroller #category-title {
+    font-size: 1.25rem;
+    position: absolute;
+    text-align: center;
+    top: 1.25rem;
+    width: 100%; }
   .app #featured-scroller #featured-nav, .app #book-scroller #featured-nav {
     display: none; }
   .app .book, .app .collection, .app .library {
@@ -7227,6 +7236,19 @@ a.count span.dont-move {
     left: 46.5%;
     right: inherit;
     text-align: center; }
+
+  body.library #featured-panel {
+    background-color: transparent !important;
+    z-index: 10; }
+
+  #book-scroller #user-header {
+    background-color: transparent !important;
+    position: absolute;
+    z-index: 10;
+    text-align: center;
+    top: 0;
+    width: 100%;
+    display: block !important; }
 
   .full-book {
     overflow-x: hidden;
@@ -7599,7 +7621,8 @@ a.count span.dont-move {
   .profile #user-panel {
     height: 75px;
     position: relative;
-    transition: all 0.5s ease; }
+    transition: all 0.5s ease;
+    z-index: 10; }
   .profile #user-panel h2, .profile #user-panel .button-wrapper {
     display: none; }
   .profile #user-panel h2 {
@@ -7608,8 +7631,10 @@ a.count span.dont-move {
     bottom: 8%;
     left: 0; }
   .profile #user-panel #g-menu-toggle {
+    background-image: none !important;
     color: #59b3a6 !important;
-    left: 1.3rem; }
+    left: 1.1rem;
+    top: -10px; }
   .profile #user-panel #user-wrapper {
     width: 100%;
     height: 100%;
@@ -7712,14 +7737,15 @@ a.count span.dont-move {
     font-style: italic;
     font-weight: 400;
     margin-top: 0.5rem;
-    opacity: 1; }
+    opacity: 1;
+    display: none !important; }
   .profile #user-header:before {
     content: "Published by";
     margin-right: 6px; }
   .profile #user-panel {
     background: none !important;
     height: 65px;
-    z-index: 0; }
+    z-index: 10; }
   .profile #user-panel #user-wrapper h2 {
     width: 100%;
     height: 65px;
